--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2020-06-02  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 5.7 released.
+
+	* Volume control: Proper support of mute change requests for
+	  incremental volume scale.
+
+	* Introspection: Read out version number from the correct place in V2
+	  StrBo series.
+
+	* Misc: Remove compiler warnings and fix compilation with gcc 10.1.
+
 2020-03-30  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 5.6 released.
