--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-08-10  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 5.9 released.
+
+	* Stability: Fix crash during startup when Gerbera is discovered on
+	  D-Bus before the Content Manager proxy has been created.
+
 2020-08-04  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 5.8 released.
