--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-08-20  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 5.10 released.
+
+	* Appliances: Recognize appliance "MP200".
+
 2020-08-10  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 5.9 released.
