--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-04-15  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 6.1 released.
+
+	* Networking: Periodically reset Ethernet PHY while Ethernet is not
+	  active. This is a workaround for a problem with cable detection in
+	  Kernel 5.10.25. The fix should be done in kernel (or configuration),
+	  but we need to move on NOW.
+
 2021-03-25  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 6.0 released.
