--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2021-04-27  Robert Tiemann  <r.tiemann@ta-hifi.de>
+
+	* Version 6.2 released.
+
+	* Player: Ignore the new buffer information D-Bus signal sent around
+	  by streamplayer. Just to avoid spamming the log with useless
+	  messages.
+
 2021-04-15  Robert Tiemann  <r.tiemann@ta-hifi.de>
 
 	* Version 6.1 released.
